Added color to Background and shadow to circles

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="utf-8">
     <title>bubbles</title>
   </head>
+  <style>
+    body {
+      background: #FFFFFE;
+    }
+  </style>
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
